# http_server_rust

./: Cargo.toml  README.md
.github/workflows/: rust.yml
scripts/: init_db.ps1
src/: configuration.rs  configuration.yaml  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
