[package]
name = "rust_mail"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
"runtime-actix-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate"
]

[lib]
path = "src/lib.rs"
[[bin]]
path = "src/main.rs"
name = "rust_mail"

[dev-dependencies]
reqwest = "0.11"